2013-02-19 Paolo Mantegazza <mantegazza@aero.polimi.it> and 

	* addons/rtdm/vfile.h, vfile.c and proc.c: updated for Linux >= 3.10.0,
	  lifted from native nucleus and rtdm.
	* addons/rtdm/rtdm_driver.h: added declaration to support the new proc 
	  file system.
	* addons/rtdm/module.c: provisional quick and dirty inclusion of 
	  vfile.c for a preliminary test.

2013-02-16 Paolo Mantegazza <mantegazza@aero.polimi.it> and 

	* base/include/rtai_proc_fs.h: added support for changes of proc files 
	  usage for Linux >= 3.10.
	* base/arch/x86/hal/hal_32.c and hal_64.c: modified support of proc 
	  files for Linux >= 3.10.
	* base/sched/sched.c and api.c: modified support of proc files for 
	  Linux >= 3.10.
	* base/ipi/fifos/fifos.c: modified support of proc files for 
	  Linux >= 3.10.
	* base/ipi/mq/mq.c: modified support of proc files for Linux >= 3.10.
	* base/wd/wd.c: modified support of proc files for Linux >= 3.10.
	* testsuite/kern/latency/latency-module.c: modified support of proc 
	  files for Linux >= 3.10.

2013-11-23 Paolo Mantegazza <mantegazza@aero.polimi.it> and 

	* base/math/libm.c: added function cd2str, i.e. compex double to 
	  string.

2013-11-19 Paolo Mantegazza <mantegazza@aero.polimi.it> and 
	   Marco Morandini <morandini@aero.polimi.it>

	* base/math/libm.c: updated to use complex functions and glibc-libm.a,
	  i386 only, newlib-libm.a and uClibi-libm.a
	* base/math/export_glibc, export_newlib.h and export_uclibc.h: private
	  headers exporting what is specific to each of the supported libm.a.
	* base/math/README.KLIBM: explanation of what the new way math support
	  in kernel space is.
	* base/include/rtai_math.h: new self contained header.
	* base/arch/x86/Kconfig: add parameters to configure the refurbished 
	  math support in kernel space.

2013-12-06 Pierangelo Masarati <masarati@aero.polimi.it>

	* RTAI 4.0

2013-11-14 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/arch/x86/hal/hal.c: do not make available rtai_sched_affinity